--- a/src/app/problems/problems.component.html
+++ b/src/app/problems/problems.component.html
@@ -33,7 +33,9 @@
     <div class="w-full h-full bg-white">{{ questions }}</div>
   </div> -->
   <div class="flex-1 w-full flex flex-col gap-2">
-    <div class="flex-1 w-full bg-white p-2 rounded overflow-auto">{{ question.question }}</div>
+    <div class="flex-1 w-full bg-white p-2 rounded overflow-auto">
+      {{ question.question }}
+    </div>
     <!-- <textarea
       class="flex-1 w-full p-2 rounded"
       name="answer"
@@ -50,7 +52,7 @@
     @if (showSolution) {
     <div class="w-full bg-white p-2 rounded border border-black">
       <p>Solution:</p>
-      <div class="w-full break-words">{{ question.solution }}</div>
+      <div class="w-full break-words" [innerHTML]="question.solution"></div>
     </div>
     }
   </div>
