--- a/src/app/problems/problems.component.html
+++ b/src/app/problems/problems.component.html
@@ -29,28 +29,17 @@
     }
   </div>
   @if (showQuestion) {
-  <!-- <div class="w-1/2 h-full flex flex-col items-start justify-start">
-    <div class="w-full h-full bg-white">{{ questions }}</div>
-  </div> -->
   <div class="flex-1 w-full flex flex-col gap-2">
     <div class="flex-1 w-full bg-white p-2 rounded overflow-auto">
       {{ question.question }}
     </div>
-    <!-- <textarea
-      class="flex-1 w-full p-2 rounded"
-      name="answer"
-      id="answer"
-      [(ngModel)]="answer"
-      cols="30"
-      rows="10"
-    ></textarea> -->
     <div class="w-full flex justify-end">
       <button class="border px-2 py-1 rounded" (click)="toggleSolution()">
         Solution
       </button>
     </div>
     @if (showSolution) {
-    <div class="w-full bg-white p-2 rounded border border-black">
+    <div class="w-full bg-white p-2 rounded border border-black overflow-auto">
       <p>Solution:</p>
       <div class="w-full break-words" [innerHTML]="question.solution"></div>
     </div>
