--- a/src/app/problems/problems.component.html
+++ b/src/app/problems/problems.component.html
@@ -30,7 +30,9 @@
   </div>
   @if (showQuestion) {
   <div class="flex-1 w-full flex flex-col gap-2">
-    <div class="flex-1 w-full bg-white p-2 rounded overflow-auto">
+    <div
+      class="flex-1 w-full bg-white p-2 rounded border border-black overflow-auto"
+    >
       {{ question.question }}
     </div>
     <div class="w-full flex justify-end">
