--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex w-full justify-end">
+<div class="flex w-full justify-end p-2">
   <input
     type="checkbox"
     value="synthwave"
