--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,43 @@
-<div class="flex w-full justify-end p-2">
-  <input
-    type="checkbox"
-    value="synthwave"
-    class="toggle theme-controller col-span-2 col-start-1 row-start-1 border-sky-400 bg-amber-300 [--tglbg:theme(colors.sky.500)] checked:border-blue-800 checked:bg-blue-300 checked:[--tglbg:theme(colors.blue.900)]"
-  />
+<div class="w-full h-full flex flex-col items-start justify-start">
+  <div class="flex w-full justify-end p-2">
+    <label class="flex cursor-pointer gap-2">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="20"
+        height="20"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <circle cx="12" cy="12" r="5" />
+        <path
+          d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"
+        />
+      </svg>
+      <input
+        type="checkbox"
+        value="synthwave"
+        class="toggle theme-controller"
+      />
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="20"
+        height="20"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+      </svg>
+    </label>
+  </div>
+  <div class="flex-1 w-full">
+    <router-outlet />
+  </div>
 </div>
-<router-outlet />
