--- a/src/app/selected-problem/selected-problem.component.html
+++ b/src/app/selected-problem/selected-problem.component.html
@@ -1,4 +1,43 @@
 <div class="w-full h-full p-2 flex flex-col sm:flex-row gap-2">
+  @if (showQuestion) {
+  <div class="flex-1 sm:h-full flex flex-col gap-2">
+    <div
+      class="sm:flex-1 p-2 flex flex-col rounded border border-error bg-base-200 overflow-auto"
+    >
+      <p>Problem:</p>
+      <!-- <div class="max-h-fit w-full" [innerHTML]="question().statement"></div> -->
+      <textarea
+        class="textarea textarea-bordered bg-base-200 flex-1 max-h-fit w-full p-2 overflow-auto"
+        name="answer"
+        id="answer"
+        cols="30"
+        rows="10"
+        readonly
+        >{{ question().statement }}</textarea
+      >
+    </div>
+    @if (showSolution) {
+    <div
+      class="relative flex-1 w-full p-2 flex flex-col rounded border border-accent bg-base-200 overflow-auto"
+    >
+      <button class="absolute top-0 right-0" (click)="toggleSolution()">
+        x
+      </button>
+      <p>Solution:</p>
+      <!-- <div class="w-full break-words" [innerHTML]="question().solution"></div> -->
+      <textarea
+        class="textarea textarea-bordered bg-base-200 flex-1 max-h-fit w-full p-2 overflow-auto"
+        name="answer"
+        id="answer"
+        cols="30"
+        rows="10"
+        readonly
+        >{{ question().solution }}</textarea
+      >
+    </div>
+    }
+  </div>
+  }
   <div class="flex-1 h-full flex flex-col items-start justify-start gap-2">
     <div class="flex-1 w-full flex flex-col gap-2">
       <textarea
@@ -31,30 +70,4 @@
     </div>
     }
   </div>
-  @if (showQuestion) {
-  <div class="flex-1 sm:h-full flex flex-col gap-2">
-    <div class="sm:flex-1 p-2 rounded border border-error bg-base-200 overflow-auto">
-      <div class="w-full flex justify-between">
-        <p>Problem:</p>
-      </div>
-      <div
-        class="max-h-fit w-full"
-        [innerHTML]="question().statement"
-      ></div>
-    </div>
-    @if (showSolution) {
-    <div
-      class="relative flex-1 w-full p-2 rounded border border-accent bg-base-200 overflow-auto"
-    >
-      <button class="absolute top-0 right-0" (click)="toggleSolution()">
-        x
-      </button>
-      <div class="w-full flex justify-between">
-        <p>Solution:</p>
-      </div>
-      <div class="w-full break-words" [innerHTML]="question().solution"></div>
-    </div>
-    }
-  </div>
-  }
 </div>
